# NumericalNeuralSurrogate

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
SR_output/block_6974488800/dim0_1774955257/: checkpoint.pkl  hall_of_fame.csv.bak
